# Archives

./: .gitignore  .gitlab-ci.yml  Archives.doap  CODE_OF_CONDUCT.md  Makefile  README.md  meson.build  meson_options.txt  update-bundle.vala  vala-lint.conf
build-aux/: dev.geopjr.Archives.Devel.json
data/: dev.geopjr.Archives.desktop.in  dev.geopjr.Archives.gschema.xml  dev.geopjr.Archives.metainfo.xml.in  gresource.xml.in  meson.build  style-dark.css  style.css
data/ui/: applicationwindow.ui  help-overlay.ui  overviewtab.ui  preferences.ui
data/web/: replay.html  ruffle.html
po/: POTFILES  dev.geopjr.Archives.pot  meson.build
src/: Application.vala  Build.vala.in  meson.build
src/Network/: Server.vala  meson.build
src/Utils/: Celebrate.vala  Egg.vala  Host.vala  Settings.vala  meson.build
src/Views/: ArchivePage.vala  HtmlPage.vala  PreferencesDialog.vala  ReplayPage.vala  RufflePage.vala  WebViewPage.vala  meson.build
src/Widgets/: OverviewTab.vala  WebView.vala  meson.build
